# TutorLink

./: .gitignore  README.md
phase-1/: lisez-moi.md
phase-2/: lisez-moi.md
phase-3/: lisez-moi.md
phase-3/tutorlink-app/: README.md
phase-3/tutorlink-app/flask_cas/: __init__.py  routing.py
phase-3/tutorlink-app/instance/: development.py
phase-3/tutorlink-app/sql/: populate.sql  schema.sql
phase-3/tutorlink-app/tests/: populate.json  test_db.py  test_home.py  test_profile.py  test_session.py  test_tutorlink.py
phase-3/tutorlink-app/tutorlink/: admin_panel.py  auth.py  data.py  home.py  session.py
phase-3/tutorlink-app/tutorlink/static/js/: tutorlink.js
phase-3/tutorlink-app/tutorlink/templates/: alerts.html  base.html  data_update.html
phase-3/tutorlink-app/tutorlink/templates/admin/: panel.html
phase-3/tutorlink-app/tutorlink/templates/auth/: login.html  register.html
tutorlink-app/: .flaskenv  setup.cfg  setup.py
tutorlink-app/flask_sqlalchemy_session/: __init__.py
tutorlink-app/instance/: test.py
tutorlink-app/tests/: conftest.py  test_admin_panel.py  test_auth.py  test_data_update.py
tutorlink-app/tutorlink/: __init__.py  db.py  profile.py
tutorlink-app/tutorlink/static/css/: tutorlink-with-bootstrap.css
tutorlink-app/tutorlink/templates/: topbar_banner.html
tutorlink-app/tutorlink/templates/home/: index.html
tutorlink-app/tutorlink/templates/profile/: user.html
tutorlink-app/tutorlink/templates/session/: session_cards.html  session_list.html
