[metadata]
name = tutorlink
version = 1
license = BSD-3-Clause
maintainer = Ghali Slaoui, Muneeb Mirza, Julien Lagarde, Meanonn Tan
maintainer_email = ghali.slaoui@mines-albi.fr, muneeb.mirza@mines-albi.fr, julien.lagarde@mines-albi.fr, meanonn.tan@mines-albi.fr
description = tutorlink-app, application pour obtenir notre diplôme.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
install_requires =

    # pour développer l'application Web
    Flask

    # pour lire les fichier .env (ou .flaskenv)
    python-dotenv

    # pour l'accès à la base de données via l'ORM (SQLAlchemy)
    psycopg2-binary
    sqlalchemy

    # pour le process des données entrantes via le json extrait de Synapses
    pandas
    xmltodict


[options.extras_require]
test =
    # pour effectuer les tests de l'application
    pytest
    pytest-dotenv
    # pour mesurer le taux de couverture des tests
    coverage
build =
    # pour construire l'archive d'installation
    build

[tool:pytest]
testpaths = tests
env_files =
    .flaskenv
filterwarnings =
    ignore::DeprecationWarning

[coverage:run]
branch = True
source =
    test-app
